2008-01-16  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/Makefile.am (dist_kaffeawt_JAVA): 
	Removed duplicate files from GNU Classpath.

	* libraries/javalib/awt-implementations/kaffe/java/awt/ActionEvt.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/FocusEvt.java, 
	libraries/javalib/awt-implementations/kaffe/java/awt/Dialog.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/NativeGraphics.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Frame.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Window.java:
	Fixed compilation problems by using Kaffe specific methods, or removing#
	broken features.

	* libraries/javalib/awt-implementations/kaffe/java/awt/AWTError.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/AWTException.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/AWTPermission.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/ActiveEvent.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Adjustable.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/AlphaComposite.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/BasicStroke.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Color.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/ColorPaintContext.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/ComponentOrientation.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Composite.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/CompositeContext.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/DisplayMode.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/FocusTraversalPolicy.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/FontFormatException.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/GradientPaint.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Graphics2D.java,