@@ -1,5 +1,12 @@
 2008-01-16  Dalibor Topic  <robilad@kaffe.org>
 
+	*  libraries/javalib/awt-implementations/kaffe/java/awt/image/package.html,
+	libraries/javalib/awt-implementations/kaffe/java/awt/package.html,
+	libraries/javalib/awt-implementations/kaffe/java/awt/event/package.html: 
+	Removed left over copies of Classpath's javadoc.
+
+2008-01-16  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/awt-implementations/kaffe/Makefile.am (dist_kaffeawt_JAVA): 
 	Removed duplicate files from GNU Classpath.
 
